<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/user_formdetails"
            android:textSize="10pt"
            android:layout_marginTop="10pt"
            android:layout_marginBottom="10pt">
        </TextView>

        <EditText
            android:id="@+id/EditTextMobile"
            android:layout_height="wrap_content"
            android:hint="@string/user_mobilenumber"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <Button
            android:id="@+id/ButtonSaveUserDetails"
            android:layout_height="wrap_content"
            android:text="@string/user_saveuserdetailsbtn"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</ScrollView>
