<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/db1_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="25dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textSize="35dp"
            android:shadowColor="@color/text_shadow"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="left"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:textSize="25dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_weight="1"
            android:gravity="bottom"
            android:layout_marginTop="5dip">

            <Button
                android:id="@+id/share_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="15dip"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:text="@string/share_btn_text" />

        </RelativeLayout>
        <!-- Child linear layout with horizontal orientation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:background="#ffffff"
            android:layout_weight="2"
            android:gravity="bottom"
            android:layout_marginTop="5dip">

            <Button
                android:id="@+id/show_contacts_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/show_contacts_button" />

            <Button
                android:id="@+id/add_contacts_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15dip"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_contacts_button"
                />
        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>
